--- a/.dwm/dwm/README
+++ b/.dwm/dwm/README
@@ -21,21 +21,31 @@ These patches are available in the /patches subdir.
 
 The my-dwm.diff file can be used to apply all those patches at once on the dwm (6.2) source code : git clone https://git.suckless.org/dwm
 
+
 config.def.h is edited to make use of pywal colors. 
-In order to use this build without pywal, replace the following line :
+In order to use this build without pywal, remove the following lines :
+
 
 #include "/home/fuzzbox/.cache/wal/colors-wal-dwm.h"
 
-by these lines : 
+static const char *dmenucmd[]   = { "dmenu_run", "-m", dmenumon, "-fn", dmenufont, "-nb", norm_bg, "-nf", norm_fg, "-sb", sel_bg, "-sf", sel_fg, "-c", "-bw", "1", "-h", "32", "-l", "5", "-z", "800", "-p", "Run", NULL };
 
-static const char col_gray1[]       = "#222222";    
+
+and uncomment these lines :
+
+
+/* static const char col_gray1[]       = "#222222";    
 static const char col_gray2[]       = "#444444";    
 static const char col_gray3[]       = "#bbbbbb";    
 static const char col_gray4[]       = "#eeeeee";    
 static const char col_cyan[]        = "#005577";    
-static const char *colors[][3]      = {    
+static const char *colors[][3]      = {    */
         /*               fg         bg         border   */    
-        [SchemeNorm] = { col_gray3, col_gray1, col_gray2 },    
+/*      [SchemeNorm] = { col_gray3, col_gray1, col_gray2 },    
         [SchemeSel]  = { col_gray4, col_cyan,  col_cyan  },    
-};
+}; */
+
+and this one :
+
+/* static const char *dmenucmd[] = { "dmenu_run", "-m", dmenumon, "-fn", dmenufont, "-nb", col_gray1, "-nf", col_gray3, "-sb", col_cyan, "-sf", col_gray4, NULL };*/
 
