--- a/.suckless/st/README
+++ b/.suckless/st/README
@@ -3,6 +3,7 @@ st-copyurl-20190202-3be4cf1.diff
 st-delkey-20201112-4ef0cbd.diff
 st-scrollback-20201205-4ef0cbd.diff
 st-w3m-0.8.3.diff
+st-font2-20190416-ba72400.diff
 
 st - simple terminal
 --------------------
