--- a/.suckless/dmenu/README
+++ b/.suckless/dmenu/README
@@ -1,7 +1,5 @@
-This is my build of dmenu, patched with "center", "line height" and "border" patches.
+dmenu, patched with "center", "line height" and "border" patches.
 
-##################################################################
-##################################################################
 
 dmenu - dynamic menu
 ====================
