--- a/.suckless/dmenu/README
+++ b/.suckless/dmenu/README
@@ -1,5 +1,7 @@
-dmenu, patched with "center", "line height" and "border" patches.
+This is my build of dmenu, patched with "center", "line height" and "border" patches.
 
+##################################################################
+##################################################################
 
 dmenu - dynamic menu
 ====================
